# MuFU-Transformer

./: LICENSE  MuFU.opam~  README.md  alg.txt  alg.txt~  dune-project  dune-project~  eg3.txt  eg3.txt~  eg4.txt  eg4.txt~  mufu
_build/default/: META.muFU  README.md  muFU.dune-package  muFU.install
doc/: alg.txt
input/PPL2018/: 001_PPL2018.in  001_PPL2018.in.out  002_2019.in~  002_PPL2018.in.out  003_PPL2018.in  003_PPL2018.in.out  004_2019.in~  004_PPL2018.in  004_PPL2018.in.out  005_2019.in~  005_PPL2018.in  005_PPL2018.in.out  006_PPL2018.in  006_PPL2018.in.out  007_2019B.in~  007_PPL2018B.in  008_2019.in~  008_PPL2018.in  008_PPL2018.in.out  008_PPL2018b.in  008_PPL2018b.in.out  009_2019.in~  009_PPL2018.in  009_PPL2018.in.out  010_PPL2018.in  010_PPL2018.in.out  011_2019.in~  011_PPL2018.in.out  011_PPL2018b.in  011_PPL2018b.in.out  011_PPL2018b.in~  012_PPL2018.in  012_PPL2018.in.out  013_PPL2018.in  013_PPL2018.in.out  014_2019.in~  014_PPL2018.in  014_PPL2018.in.out  015_PPL2018.in  015_PPL2018.in.out  (+39 more)
input/async/: async1.in.out  async1.in.out~  async1.in~  async2.in.out  async2.in.out~  async2.in~  async3.in  async3.in.out  comm.in.out  guess1.in~  guess2.in  guess2.in~  neven.in  neven.in.out  t3.in.out  t3.in~  t3_imp.in  t3_imp.in~  (+3 more)
lib/: dune  dune~  muFU.ml  muFU.ml~
lib/syntax/: arith.ml  dune  dune~  fixpoint.ml  formula.ml  hfl.ml  hflz.ml  id.ml  id.ml~  idMap.ml  idSet.ml  lexer.mll  muFU_syntax.ml  parser.mly  print.ml  raw_hflz.ml  raw_hflz.ml~  regex_handler.ml~  trans.ml  trans.ml~  type.ml
output/: ex1.in  ex1.in~  ex2.in  ex2.in~
(+375 files in other folders)
