(menhir
 (flags --dump --explain --table --inspection)
 (modules parser))
(ocamllex
 (modules lexer))

(library
 (public_name muFU_syntax)
 (libraries
   muFU_util
   muFU_options
   menhirLib)
 (preprocess (pps ppx_deriving.std ppx_compare ppx_sexp_conv)))
(env (dev (flags (:standard -warn-error -A -w -3-26-27-33))))
